# todo-app-phase4

./: .env.example  .gitignore  CLAUDE.md  README.md  SERVER_SETUP.md  auth-spec.md  docker-compose.yml  pyproject.toml  run_main_server.py  run_mcp_server.py  start_both.bat  start_both.sh  start_both_servers.py  test_chat_integration.py  test_chat_integration_fixed.py  test_implementation.py  validate_routes.py  verify_implementation.py
backend/: .env.example  README.md  config.py  create_frontend.py  database_init.py  init_db.py  main.py  requirements.txt  start_server.py  start_server_alt.py  test_enum_fix.py  test_spec_compliance.py
backend/app/: __init__.py  api.py  auth.py  config.py  main.py  requirements.txt  storage.py
backend/mcp/: mcp_server.py
backend/src/: config.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: AnimatedWrapper.tsx  ConfettiEffect.tsx  FloatingChatButton.js  Header.js  Layout.js  Layout.tsx  ProgressBar.tsx  Sidebar.js  SortableTodoItem.tsx  SortableTodoList.tsx  ThemeToggle.tsx  Toast.tsx  TodoFilters.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx
frontend/contexts/: AuthContext.js  TodoContext.tsx  TodoContext.tsx.backup
frontend/hooks/: useTheme.ts
frontend/pages/: _app.js  _document.js  chat.js  dashboard.js  index.js  login.js  signup.js  todo.js
frontend/styles/: globals.css
frontend/types/: todo.ts
specs/: chat-agent-spec.md  mcp-tools-spec.md  prd.md
specs/001-todo-app-features/: auth-spec.md  component-spec.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tech-spec.md
(+43 files in other folders)
